--- a/aling.html
+++ b/aling.html
@@ -6,7 +6,7 @@
           <p align ="center">my location is pune</p>
           <p align ="left">my name></p>
           <hr>
-          <input type ="time"><br> <br>
+        priyanka chavan  <input type ="time"><br> <br>
           <input type ="date"><br> <br>
           <input type ="datetime-local"><br> <br>
           <input type ="Range"><br> <br>
